# quadmesh

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: QuadMeshConfig.cmake.in  QuadmeshConfig.cmake.in  quadmeshConfig.cmake.in
include/qmsh/: config.hpp  debug.hpp  holed_vector.hpp  inout.hpp  mesh.hpp  serialize.hpp
include/quadmesh/: quad_mesh.h  quadmesh_config.h
scripts/: activate  carcas.py  draw_carsas.py  mesh_data_struct.md  mkimg.py  test.py  togeo.py
src/: main.cpp
src/mesh/: config.cpp  curve_discretize.cpp  curve_discretize.h  curve_discretize.hpp  inout.cpp  mesh.cpp  mesh_face.cpp  mesh_face_.h  quad_mesh.cpp  quad_mesh_builder.cpp  quad_mesh_builder.h  quad_surface_mesh_builder.cpp  quad_surface_mesh_builder.h  quadmesh_config.cpp
src/util/: cyclic_iterator.hpp  debug.h  debug.hpp  itertools.h  itertools.hpp  logging.cpp  logging.h  math.cpp  math.h  math.hpp  to_string.cpp  to_string.h  to_string.hpp  util.h  util.hpp
step/: cube.stp  parabcyl.stp  polydomain.stp  qcircle.stp  spherecyl.stp
test/: CMakeLists.txt
test/src/: test_misc.cpp  test_surface_builder.cpp
tests/: CMakeLists.txt
tests/src/: test_discretize.cpp  test_misc.cpp  test_surface_builder.cpp  test_surface_builder.cxx
